compiler-executable/iris-spago/tests/snapshots/manifest__derives_package_metadata_and_source_globs.snap
---
source: compiler-executable/iris-spago/tests/manifest.rs
---
(
    [
        "graphql-client",
        "deku-core",
    ],
    [],
    [
        "graphql-client",
        "deku-core",
    ],
    [
        "src/**/*.purs",
        "test/**/*.purs",
    ],
    [
        (
            "deku-core",
            Some(
                "deku-core",
            ),
            [
                "deku-core/src",
            ],
            [],
        ),
        (
            "graphql-client",
            None,
            [
                "src",
            ],
            [
                "aff",
                "prelude",
            ],
        ),
    ],
)
