compiler-executable/iris-spago/tests/snapshots/manifest__parses_local_extra_packages.snap
---
source: compiler-executable/iris-spago/tests/manifest.rs
---
Manifest {
    package: Some(
        Package {
            name: "application",
            description: None,
            dependencies: [
                Dependency {
                    name: "fixture-local",
                    constraint: None,
                },
            ],
            run: None,
            test: None,
        },
    ),
    workspace: Some(
        Workspace {
            package_set: None,
            extra_packages: {
                "fixture-local": Local(
                    LocalPackage {
                        path: "../fixture-local",
                    },
                ),
            },
        },
    ),
}
