compiler-executable/iris-spago/tests/snapshots/manifest__parses_minimal_package.snap
---
source: compiler-executable/iris-spago/tests/manifest.rs
---
Manifest {
    package: Some(
        Package {
            name: "minimal",
            description: None,
            dependencies: [],
            run: None,
            test: None,
        },
    ),
    workspace: None,
}
