compiler-executable/iris-spago/tests/snapshots/manifest__parses_registry_workspace.snap
---
source: compiler-executable/iris-spago/tests/manifest.rs
---
Manifest {
    package: Some(
        Package {
            name: "application",
            description: None,
            dependencies: [],
            run: None,
            test: None,
        },
    ),
    workspace: Some(
        Workspace {
            package_set: Some(
                Registry {
                    registry: "64.10.0",
                },
            ),
            extra_packages: {},
        },
    ),
}
