compiler-executable/iris-spago/tests/snapshots/manifest__rejects_constrained_test_without_main.snap
---
source: compiler-executable/iris-spago/tests/manifest.rs
---
package.test: missing field `main` at line 5 column 5
